--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 				<div class="col-intro fadein">
 					<h2 class="sub-heading">My Intro</h2>
 					<h2 class="parenthead">ABOUT ME</h2>
-					<p>I am a passionate web developer and talented vector artist, dedicated to creating stunning visual experiences and functional websites. I am a passionate web developer and talented vector artist, dedicated to creating stunning visual experiences and functional websites. With a blend of technical expertise and artistic creativity, I bring a unique approach to every project&nbsp;I&nbsp;undertake.</p>
+					<p>I'm Nathan, a versatile creative professional at the intersection of web development and vector artistry. I craft engaging digital experiences through web design and bring visuals to life with the precision of vector graphics. Welcome to my portfolio, where art and technology converge to create captivating online worlds.</p>
 					<div class="years">
 						<h3 class="noyears">05</h3>
 						<h3 class="expyear">Years of Experience</h3>
@@ -145,7 +145,7 @@
 				<div class="worktxt fadeup">
 					<h2 class="sub-heading">My Portfolio</h2>
 					<h2 class="parenthead">RECENT WORKS</h2>
-					<p>I am a passionate web developer and talented vector artist, dedicated to creating stunning visual experiences and functional websites. I am a passionate web developer and talented vector artist, dedicated to creating stunning visual experiences and functional websites. With a blend of technical expertise and artistic creativity, I bring a unique approach to every project I undertake.</p>
+					<p>Step into a world where creativity meets functionality with our portfolio showcasing the seamless fusion of web design and vector art. Explore a dynamic collection of digital experiences that not only captivate but also engage users on the web. From visually arresting vector illustrations that breathe life into brands to cutting-edge websites that blend aesthetics with usability, this portfolio reflects our commitment to delivering innovative, visually striking, and user-centric digital solutions. Witness the power of artistry and design working in harmony to elevate online experiences to new heights.</p>
 					<a href="https://www.behance.net/jonathanambatali" target="_blank">View More &nbsp;<i class="fa-solid fa-arrow-right"></i></a>
 				</div>
 			</div>
