--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
 					</div>
 						<ul id="head-nav">
 							<li><a href="/">home</a></li>
-							<li><a href="/#aboutme">about me</a></li>						
-							<li><a href="/#portfolio">portfolio</a></li>
+							<li><a href="/devcodeportfolio/#aboutme">about me</a></li>						
+							<li><a href="/devcodeportfolio/#portfolio">portfolio</a></li>
 							<li><a target="_blank" href="images/resume/MyResume.pdf">Hire Me</a></li>
 						</ul>
 				</nav>
@@ -174,8 +174,8 @@
 				<div class="footernav">
 					<ul id="head-nav" class="foo-nav">
 						<li><a href="/">home</a></li>
-						<li><a href="/#aboutme">about me</a></li>						
-						<li><a href="/#portfolio">portfolio</a></li>
+						<li><a href="/devcodeportfolio/#aboutme">about me</a></li>						
+						<li><a href="/devcodeportfolio/#portfolio">portfolio</a></li>
 						<li><a target="_blank" href="images/resume/MyResume.pdf">Hire Me</a></li>
 					</ul>
 				</div>
