--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
 				<div class="worktxt fadeup">
 					<h2 class="sub-heading">My Portfolio</h2>
 					<h2 class="parenthead">RECENT WORKS</h2>
-					<p>Step into a world where creativity meets functionality with our portfolio showcasing the seamless fusion of web design and vector art. Explore a dynamic collection of digital experiences that not only captivate but also engage users on the web. From visually arresting vector illustrations that breathe life into brands to cutting-edge websites that blend aesthetics with usability, this portfolio reflects our commitment to delivering innovative, visually striking, and user-centric digital solutions. Witness the power of artistry and design working in harmony to elevate online experiences to new heights.</p>
+					<p>Explore a dynamic blend of creativity and functionality in my recent works portfolio. Dive into a world of captivating web design, where user-friendly interfaces meet stunning visuals, and discover the vibrant realm of vector artistry, where precision meets imagination. Join me on a journey where websites come to life, and vector graphics paint stories with every line. Welcome to a showcase where innovation meets aesthetics, creating digital experiences that leave a lasting impression.</p>
 					<a href="https://www.behance.net/jonathanambatali" target="_blank">View More &nbsp;<i class="fa-solid fa-arrow-right"></i></a>
 				</div>
 			</div>
