--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 						<span class="menu"><i class="fa fa-bars"></i></span>
 					</div>
 						<ul id="head-nav">
-							<li><a href="/">home</a></li>
+							<li><a href="/devcodeportfolio/">home</a></li>
 							<li><a href="/devcodeportfolio/#aboutme">about me</a></li>						
 							<li><a href="/devcodeportfolio/#portfolio">portfolio</a></li>
 							<li><a target="_blank" href="images/resume/MyResume.pdf">Hire Me</a></li>
@@ -173,7 +173,7 @@
 				</div>
 				<div class="footernav">
 					<ul id="head-nav" class="foo-nav">
-						<li><a href="/">home</a></li>
+						<li><a href="/devcodeportfolio/">home</a></li>
 						<li><a href="/devcodeportfolio/#aboutme">about me</a></li>						
 						<li><a href="/devcodeportfolio/#portfolio">portfolio</a></li>
 						<li><a target="_blank" href="images/resume/MyResume.pdf">Hire Me</a></li>
