--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 		<div class="container">
 		<div class="mainhead">
 			<div class="col-logo">
-				<a href="/"><img src="images/f-logo.png" class="logo_1" width="80px"/></a>
+				<img src="images/f-logo.png" class="logo_1" width="80px"/>
 			</div>
 			<div class="col-nav">
 				<nav>
