--- a/index.html
+++ b/index.html
@@ -151,6 +151,43 @@
 			</div>
 		</div>
 	</div>
+	<div class="prodsection spacer">
+		<div class="container">
+			<div class="slidesection">
+
+				<div class="slide-container active">
+					<div class="slide">
+						<div class="content">
+							<h3>Booking Tickets</h3>
+							<p>Light Theme: Beaver Builder</p>
+							<p>Plan Type: 5 Pager | Event Tickets & RSVP</p>
+							<p>Color Scheme: <span class="circle-color" style="color:#62485b;"></span> <span class="circle-color" style="color:#b77649;"></span></p>
+							<a href="#" class="demo-cta">Demo</a>
+						</div>
+						<div class="slide-img">
+							<img src="images/Bagel Food Industry.jpg" alt="">
+						</div>
+					</div>
+				</div>
+				<div class="slide-container">
+					<div class="slide">
+						<div class="content">
+							<h3>Booking Tickets</h3>
+							<p>Light Theme: Beaver Builder</p>
+							<p>Plan Type: 5 Pager | Event Tickets & RSVP</p>
+							<p>Color Scheme: <span class="circle-color" style="color:#62485b;"></span> <span class="circle-color" style="color:#b77649;"></span></p>
+							<a href="#" class="demo-cta">Demo</a>
+						</div>
+						<div class="slide-img">
+							<img src="images/Medical Services.jpg" alt="">
+						</div>
+					</div>
+				</div>
+				<div id="s-prev" onclick="prev()"> <i class="fa-solid fa-angle-left"></i> </div>
+				<div id="s-next" onclick="next()"> <i class="fa-solid fa-angle-right"></i> </div>
+			</div>
+		</div>
+	</div>
 	<div class="projectoffer spacer">
 		<div class="container">
 			<div class="projectgrid">
@@ -182,6 +219,22 @@
 			</div>
 		</div>
 	</footer>
+	<script>
+		let slides = document.querySelectorAll('.slide-container');
+		let index = 0;
+
+		function next() {
+			slides[index].classList.remove('active');
+			index = (index + 1) % slides.length;
+			slides[index].classList.add('active');
+		}
+		
+		function prev() {
+			slides[index].classList.remove('active');
+			index = (index - 1 + slides.length) % slides.length;
+			slides[index].classList.add('active');
+		}
+	</script>
 	<script type="text/javascript" src="js/script.js"></script>
 	<script type="text/javascript" src="js/3.2.1/jquery.min.js"></script>
 </body>
