--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
 							<a href="#" class="demo-cta">Demo</a>
 						</div>
 						<div class="slide-img">
-							<img src="images/Bagel Food Industry.jpg" alt="">
+							<img src="https://www.behance.net/gallery/181049797/Renting-Multi-Family-Properties-Web-Design/modules/1022700749" alt="">
 						</div>
 					</div>
 				</div>
