--- a/index.html
+++ b/index.html
@@ -162,10 +162,10 @@
 							<p>Light Theme: Beaver Builder</p>
 							<p>Plan Type: 5 Pager | Event Tickets & RSVP</p>
 							<p>Color Scheme: <span class="circle-color" style="color:#62485b;"></span> <span class="circle-color" style="color:#b77649;"></span></p>
-							<a href="#" class="demo-cta">Demo</a>
+							<a href="https://www.behance.net/gallery/181049797/Renting-Multi-Family-Properties-Web-Design" target="_blank" class="demo-cta">Demo</a>
 						</div>
 						<div class="slide-img">
-							<img src="https://www.behance.net/gallery/181049797/Renting-Multi-Family-Properties-Web-Design/modules/1022700749" alt="">
+							<img src="https://mir-s3-cdn-cf.behance.net/projects/808/83bde5181049995.Y3JvcCwxODAxLDE0MDksNTcwLDA.jpg" alt="">
 						</div>
 					</div>
 				</div>
