--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
 							<h3>Booking Tickets</h3>
 							<p>Light Theme: Beaver Builder</p>
 							<p>Plan Type: 5 Pager | Event Tickets & RSVP</p>
-							<p>Color Scheme: <span class="circle-color" style="color:#62485b;"></span> <span class="circle-color" style="color:#b77649;"></span></p>
+							<p>Color Scheme: <i class="fa-solid fa-square"></i>&nbsp;<i class="fa-solid fa-square"></i></p>
 							<a href="https://www.behance.net/gallery/181049797/Renting-Multi-Family-Properties-Web-Design" target="_blank" class="demo-cta">Demo</a>
 						</div>
 						<div class="slide-img">
@@ -169,20 +169,21 @@
 						</div>
 					</div>
 				</div>
-				<div class="slide-container">
+				<div class="slide-container active">
 					<div class="slide">
 						<div class="content">
 							<h3>Booking Tickets</h3>
 							<p>Light Theme: Beaver Builder</p>
 							<p>Plan Type: 5 Pager | Event Tickets & RSVP</p>
-							<p>Color Scheme: <span class="circle-color" style="color:#62485b;"></span> <span class="circle-color" style="color:#b77649;"></span></p>
-							<a href="#" class="demo-cta">Demo</a>
+							<p>Color Scheme: <i class="fa-solid fa-square"></i>&nbsp;<i class="fa-solid fa-square"></i></p>
+							<a href="https://www.behance.net/gallery/178824701/Health-Service-and-Care-Web-Design" target="_blank" class="demo-cta">Demo</a>
 						</div>
 						<div class="slide-img">
-							<img src="images/Medical Services.jpg" alt="">
+							<img src="https://mir-s3-cdn-cf.behance.net/project_modules/fs/7e6d25178824701.64eeeacd0a4dc.jpg" alt="">
 						</div>
 					</div>
 				</div>
+
 				<div id="s-prev" onclick="prev()"> <i class="fa-solid fa-angle-left"></i> </div>
 				<div id="s-next" onclick="next()"> <i class="fa-solid fa-angle-right"></i> </div>
 			</div>
