--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
 						</div>
 					</div>
 				</div>
-				<div class="slide-container active">
+				<div class="slide-container">
 					<div class="slide">
 						<div class="content">
 							<h3>Booking Tickets</h3>
