--- a/index.html
+++ b/index.html
@@ -183,6 +183,258 @@
 						</div>
 					</div>
 				</div>
+				<div class="slide-container">
+					<div class="slide">
+						<div class="content">
+							<h3>Booking Tickets</h3>
+							<p>Light Theme: Beaver Builder</p>
+							<p>Plan Type: 5 Pager | Event Tickets & RSVP</p>
+							<p>Color Scheme: <i class="fa-solid fa-square"></i>&nbsp;<i class="fa-solid fa-square"></i></p>
+							<a href="https://www.behance.net/gallery/178824215/Food-Healthy-Lifestyle-Web-Design" target="_blank" class="demo-cta">Demo</a>
+						</div>
+						<div class="slide-img">
+							<img src="https://mir-s3-cdn-cf.behance.net/project_modules/fs/8a8478178824215.64eee8135ef15.jpg" alt="">
+						</div>
+					</div>
+				</div>
+				<div class="slide-container">
+					<div class="slide">
+						<div class="content">
+							<h3>Booking Tickets</h3>
+							<p>Light Theme: Beaver Builder</p>
+							<p>Plan Type: 5 Pager | Event Tickets & RSVP</p>
+							<p>Color Scheme: <i class="fa-solid fa-square"></i>&nbsp;<i class="fa-solid fa-square"></i></p>
+							<a href="https://www.behance.net/gallery/178825853/Book-Bar-and-Cafe-Web-Design" target="_blank" class="demo-cta">Demo</a>
+						</div>
+						<div class="slide-img">
+							<img src="https://mir-s3-cdn-cf.behance.net/project_modules/fs/15c935178825853.64eeee9967f13.jpg" alt="">
+						</div>
+					</div>
+				</div>
+				<div class="slide-container">
+					<div class="slide">
+						<div class="content">
+							<h3>Booking Tickets</h3>
+							<p>Light Theme: Beaver Builder</p>
+							<p>Plan Type: 5 Pager | Event Tickets & RSVP</p>
+							<p>Color Scheme: <i class="fa-solid fa-square"></i>&nbsp;<i class="fa-solid fa-square"></i></p>
+							<a href="https://www.behance.net/gallery/178825567/(Real-Estate)-Property-Management-Services-Web-Design" target="_blank" class="demo-cta">Demo</a>
+						</div>
+						<div class="slide-img">
+							<img src="https://mir-s3-cdn-cf.behance.net/project_modules/fs/728f8c178825567.64eeed77147e5.jpg" alt="">
+						</div>
+					</div>
+				</div>
+				<div class="slide-container">
+					<div class="slide">
+						<div class="content">
+							<h3>Booking Tickets</h3>
+							<p>Light Theme: Beaver Builder</p>
+							<p>Plan Type: 5 Pager | Event Tickets & RSVP</p>
+							<p>Color Scheme: <i class="fa-solid fa-square"></i>&nbsp;<i class="fa-solid fa-square"></i></p>
+							<a href="https://www.behance.net/gallery/178825201/Construction-Services-Web-Design" target="_blank" class="demo-cta">Demo</a>
+						</div>
+						<div class="slide-img">
+							<img src="https://mir-s3-cdn-cf.behance.net/project_modules/fs/7d7580178825201.64eeebe52d711.jpg" alt="">
+						</div>
+					</div>
+				</div>
+				<div class="slide-container">
+					<div class="slide">
+						<div class="content">
+							<h3>Booking Tickets</h3>
+							<p>Light Theme: Beaver Builder</p>
+							<p>Plan Type: 5 Pager | Event Tickets & RSVP</p>
+							<p>Color Scheme: <i class="fa-solid fa-square"></i>&nbsp;<i class="fa-solid fa-square"></i></p>
+							<a href="https://www.behance.net/gallery/178825439/Food-Culinary-Services-Web-Design" target="_blank" class="demo-cta">Demo</a>
+						</div>
+						<div class="slide-img">
+							<img src="https://mir-s3-cdn-cf.behance.net/project_modules/fs/6c41da178825439.64eeecbfcba26.jpg" alt="">
+						</div>
+					</div>
+				</div>
+				<div class="slide-container">
+					<div class="slide">
+						<div class="content">
+							<h3>Booking Tickets</h3>
+							<p>Light Theme: Beaver Builder</p>
+							<p>Plan Type: 5 Pager | Event Tickets & RSVP</p>
+							<p>Color Scheme: <i class="fa-solid fa-square"></i>&nbsp;<i class="fa-solid fa-square"></i></p>
+							<a href="https://www.behance.net/gallery/178824971/Luxury-Vacations-Web-Design" target="_blank" class="demo-cta">Demo</a>
+						</div>
+						<div class="slide-img">
+							<img src="https://mir-s3-cdn-cf.behance.net/project_modules/fs/b6c49e178824971.64eeeb2f05976.jpg" alt="">
+						</div>
+					</div>
+				</div>
+				<div class="slide-container">
+					<div class="slide">
+						<div class="content">
+							<h3>Booking Tickets</h3>
+							<p>Light Theme: Beaver Builder</p>
+							<p>Plan Type: 5 Pager | Event Tickets & RSVP</p>
+							<p>Color Scheme: <i class="fa-solid fa-square"></i>&nbsp;<i class="fa-solid fa-square"></i></p>
+							<a href="https://www.behance.net/gallery/178825337/Dental-Services-Web-Design" target="_blank" class="demo-cta">Demo</a>
+						</div>
+						<div class="slide-img">
+							<img src="https://mir-s3-cdn-cf.behance.net/project_modules/fs/dbb03a178825337.64eeec5a7b6ea.jpg" alt="">
+						</div>
+					</div>
+				</div>
+				<div class="slide-container">
+					<div class="slide">
+						<div class="content">
+							<h3>Booking Tickets</h3>
+							<p>Light Theme: Beaver Builder</p>
+							<p>Plan Type: 5 Pager | Event Tickets & RSVP</p>
+							<p>Color Scheme: <i class="fa-solid fa-square"></i>&nbsp;<i class="fa-solid fa-square"></i></p>
+							<a href="https://www.behance.net/gallery/178825675/Medical-Consultation-Web-Design" target="_blank" class="demo-cta">Demo</a>
+						</div>
+						<div class="slide-img">
+							<img src="https://mir-s3-cdn-cf.behance.net/project_modules/fs/e60c85178825675.64eeede074464.jpg" alt="">
+						</div>
+					</div>
+				</div>
+				<div class="slide-container">
+					<div class="slide">
+						<div class="content">
+							<h3>Booking Tickets</h3>
+							<p>Light Theme: Beaver Builder</p>
+							<p>Plan Type: 5 Pager | Event Tickets & RSVP</p>
+							<p>Color Scheme: <i class="fa-solid fa-square"></i>&nbsp;<i class="fa-solid fa-square"></i></p>
+							<a href="https://www.behance.net/gallery/178825773/Shipping-Continental-Services-Web-Design" target="_blank" class="demo-cta">Demo</a>
+						</div>
+						<div class="slide-img">
+							<img src="https://mir-s3-cdn-cf.behance.net/project_modules/fs/0d6241178825773.64eeee455d06e.jpg" alt="">
+						</div>
+					</div>
+				</div>
+				<div class="slide-container">
+					<div class="slide">
+						<div class="content">
+							<h3>Booking Tickets</h3>
+							<p>Light Theme: Beaver Builder</p>
+							<p>Plan Type: 5 Pager | Event Tickets & RSVP</p>
+							<p>Color Scheme: <i class="fa-solid fa-square"></i>&nbsp;<i class="fa-solid fa-square"></i></p>
+							<a href="https://www.behance.net/gallery/178825941/Online-Hockey-Network-Web-Design" target="_blank" class="demo-cta">Demo</a>
+						</div>
+						<div class="slide-img">
+							<img src="https://mir-s3-cdn-cf.behance.net/project_modules/fs/8e8070178825941.64eeeef170d9e.jpg" alt="">
+						</div>
+					</div>
+				</div>
+				<div class="slide-container">
+					<div class="slide">
+						<div class="content">
+							<h3>Booking Tickets</h3>
+							<p>Light Theme: Beaver Builder</p>
+							<p>Plan Type: 5 Pager | Event Tickets & RSVP</p>
+							<p>Color Scheme: <i class="fa-solid fa-square"></i>&nbsp;<i class="fa-solid fa-square"></i></p>
+							<a href="https://www.behance.net/gallery/178826017/Medical-Services-Web-Design" target="_blank" class="demo-cta">Demo</a>
+						</div>
+						<div class="slide-img">
+							<img src="https://mir-s3-cdn-cf.behance.net/project_modules/fs/f38a00178826017.64eeef399b0f3.jpg" alt="">
+						</div>
+					</div>
+				</div>
+				<div class="slide-container">
+					<div class="slide">
+						<div class="content">
+							<h3>Booking Tickets</h3>
+							<p>Light Theme: Beaver Builder</p>
+							<p>Plan Type: 5 Pager | Event Tickets & RSVP</p>
+							<p>Color Scheme: <i class="fa-solid fa-square"></i>&nbsp;<i class="fa-solid fa-square"></i></p>
+							<a href="https://www.behance.net/gallery/178826099/Ventilation-Services-Web-Design" target="_blank" class="demo-cta">Demo</a>
+						</div>
+						<div class="slide-img">
+							<img src="https://mir-s3-cdn-cf.behance.net/project_modules/fs/0b1825178826099.64eeef83358b0.jpg" alt="">
+						</div>
+					</div>
+				</div>
+				<div class="slide-container">
+					<div class="slide">
+						<div class="content">
+							<h3>Booking Tickets</h3>
+							<p>Light Theme: Beaver Builder</p>
+							<p>Plan Type: 5 Pager | Event Tickets & RSVP</p>
+							<p>Color Scheme: <i class="fa-solid fa-square"></i>&nbsp;<i class="fa-solid fa-square"></i></p>
+							<a href="https://www.behance.net/gallery/178826217/Counselling-Management-Services-Web-Design" target="_blank" class="demo-cta">Demo</a>
+						</div>
+						<div class="slide-img">
+							<img src="https://mir-s3-cdn-cf.behance.net/project_modules/fs/8db9e6178826217.64eeeff5a3d92.jpg" alt="">
+						</div>
+					</div>
+				</div>
+				<div class="slide-container">
+					<div class="slide">
+						<div class="content">
+							<h3>Booking Tickets</h3>
+							<p>Light Theme: Beaver Builder</p>
+							<p>Plan Type: 5 Pager | Event Tickets & RSVP</p>
+							<p>Color Scheme: <i class="fa-solid fa-square"></i>&nbsp;<i class="fa-solid fa-square"></i></p>
+							<a href="https://www.behance.net/gallery/178826287/Hair-Extension-Business-Web-Design" target="_blank" class="demo-cta">Demo</a>
+						</div>
+						<div class="slide-img">
+							<img src="https://mir-s3-cdn-cf.behance.net/project_modules/fs/463398178826287.64eef036964ba.jpg" alt="">
+						</div>
+					</div>
+				</div>
+				<div class="slide-container">
+					<div class="slide">
+						<div class="content">
+							<h3>Booking Tickets</h3>
+							<p>Light Theme: Beaver Builder</p>
+							<p>Plan Type: 5 Pager | Event Tickets & RSVP</p>
+							<p>Color Scheme: <i class="fa-solid fa-square"></i>&nbsp;<i class="fa-solid fa-square"></i></p>
+							<a href="https://www.behance.net/gallery/178826373/Accounting-Medicine-Web-Design" target="_blank" class="demo-cta">Demo</a>
+						</div>
+						<div class="slide-img">
+							<img src="https://mir-s3-cdn-cf.behance.net/project_modules/fs/601e44178826373.64eef08b84e51.jpg" alt="">
+						</div>
+					</div>
+				</div>
+				<div class="slide-container">
+					<div class="slide">
+						<div class="content">
+							<h3>Booking Tickets</h3>
+							<p>Light Theme: Beaver Builder</p>
+							<p>Plan Type: 5 Pager | Event Tickets & RSVP</p>
+							<p>Color Scheme: <i class="fa-solid fa-square"></i>&nbsp;<i class="fa-solid fa-square"></i></p>
+							<a href="https://www.behance.net/gallery/179130503/Accounting-and-Bookkeeping-Web-Design" target="_blank" class="demo-cta">Demo</a>
+						</div>
+						<div class="slide-img">
+							<img src="https://mir-s3-cdn-cf.behance.net/project_modules/fs/0ef2b1179130503.64f487bd7ee62.jpg" alt="">
+						</div>
+					</div>
+				</div>
+				<div class="slide-container">
+					<div class="slide">
+						<div class="content">
+							<h3>Booking Tickets</h3>
+							<p>Light Theme: Beaver Builder</p>
+							<p>Plan Type: 5 Pager | Event Tickets & RSVP</p>
+							<p>Color Scheme: <i class="fa-solid fa-square"></i>&nbsp;<i class="fa-solid fa-square"></i></p>
+							<a href="https://www.behance.net/gallery/179130645/NYC-Private-Tour-Web-Design" target="_blank" class="demo-cta">Demo</a>
+						</div>
+						<div class="slide-img">
+							<img src="https://mir-s3-cdn-cf.behance.net/project_modules/fs/0fd7d2179130645.64f48857607b5.jpg" alt="">
+						</div>
+					</div>
+				</div>
+				<div class="slide-container">
+					<div class="slide">
+						<div class="content">
+							<h3>Booking Tickets</h3>
+							<p>Light Theme: Beaver Builder</p>
+							<p>Plan Type: 5 Pager | Event Tickets & RSVP</p>
+							<p>Color Scheme: <i class="fa-solid fa-square"></i>&nbsp;<i class="fa-solid fa-square"></i></p>
+							<a href="https://www.behance.net/gallery/181049995/Booking-Ticket-in-Wisconsin-Web-Design" target="_blank" class="demo-cta">Demo</a>
+						</div>
+						<div class="slide-img">
+							<img src="https://mir-s3-cdn-cf.behance.net/project_modules/fs/4a9b1c181049995.651521fc88010.jpg" alt="">
+						</div>
+					</div>
+				</div>
 
 				<div id="s-prev" onclick="prev()"> <i class="fa-solid fa-angle-left"></i> </div>
 				<div id="s-next" onclick="next()"> <i class="fa-solid fa-angle-right"></i> </div>
