--- a/index.html
+++ b/index.html
@@ -444,13 +444,13 @@
 	<div class="projectoffer spacer">
 		<div class="container">
 			<div class="projectgrid">
+				<div class="projectimg fadein">
+					<img src="images/showcase.webp" alt="Project Showcase">
+				</div>
 				<div class="projecttxt fadeup">
-					<h2 class="parenthead">Have a Project on Your Mind</h2>
+					<h2 class="parenthead">Have a Project On&nbsp;Your Mind</h2>
 					<p>Contact me today to discuss your project and embark on an exciting journey of web development and vector artistry!</p>						
 					<a href="tel:+639760181159">Contact Me &nbsp;<i class="fa-solid fa-arrow-right"></i></a>
-				</div>
-				<div class="projectimg fadein">
-					<img src="images/contact.webp" alt="Project Showcase">
 				</div>
 			</div>
 		</div>
