--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 				<div class="col-intro fadein">
 					<h2 class="sub-heading">My Intro</h2>
 					<h2 class="parenthead">ABOUT ME</h2>
-					<p>I'm Nathan, a versatile creative professional at the intersection of web development and vector artistry. I craft engaging digital experiences through web design and bring visuals to life with the precision of vector graphics. Welcome to my portfolio, where art and technology converge to create captivating online worlds.</p>
+					<p>I'm Nathan, a versatile creative professional at the intersection of web development and vector artistry. I craft engaging digital experiences through web design and bring visuals to life with the precision of vector graphics.</p>
 					<div class="years">
 						<h3 class="noyears">05</h3>
 						<h3 class="expyear">Years of Experience</h3>
@@ -83,6 +83,7 @@
 					<h2 class="parenthead">Any Type of Query &&nbsp;Discussion.</h2>
 					<p class="letstxt">Let’s talk with me</p>
 					<center>
+					<a href="https://www.behance.net/jonathanambatali" target="_blank"><i class="fa-brands fa-behance"></i> &nbsp;behance.net/jonathanambatali </a>
 					<a href="mailto:jonathanambatali07@gmail.com"><i class="fa-solid fa-envelope"></i> &nbsp;jonathanambatali07@gmail.com </a>
 					<a href="mailto:nathanambatali07@gmail.com"><i class="fa-solid fa-envelope"></i> &nbsp;nathanambatali07@gmail.com </a>
 					<a href="tel:+639760181159"><i class="fa-solid fa-phone"></i> &nbsp;+63 (976) 018 1159 </a>
@@ -121,17 +122,17 @@
 					<div class="service-box1 s-box hidden">
 						<img src="images/icon/icon3 (1).png" alt="">
 						<h2>Web Design & Developer</h2>
-						<p>I specialize in creating customized web solutions and WordPress websites that empower businesses to establish a strong online presence. With a passion for design and a strong technical foundation, I offer comprehensive web development services tailored to your specific needs.</p>
+						<p>I specialize in creating customized web solutions and WordPress websites that empower businesses to establish a strong online presence.</p>
 					</div>
 					<div class="service-box2 s-box hidden">
 						<img src="images/icon/icon1 (1).png" alt="">
 						<h2>Design QA/QC Certified</h2>
-						<p>I offer top-notch web quality assurance and quality control services to ensure that your website meets the highest standards of functionality, usability, and performance. With a meticulous attention to detail and a thorough understanding of industry </p>						
+						<p>I offer top-notch web quality assurance and quality control services to ensure that your website meets the highest standards of functionality, usability, and performance.</p>						
 					</div>
 					<div class="service-box3 s-box hidden">
 						<img src="images/icon/icon2 (1).png" alt="">
 						<h2>Vector Art & Design</h2>
-						<p>I specialize in creating captivating and versatile vector art that brings your ideas to life. With a keen eye for detail and a passion for creativity, I craft stunning portrait vector, logos, banner tarpaulin, and more. Using scalable vector graphics (SVG).</p>						
+						<p>I specialize in creating captivating and versatile vector art that brings your ideas to life. With a keen eye for detail and a passion for creativity, I create stunning portrait vector, logos, banner tarpaulin, and more.</p>						
 					</div>
 				</div>
 			</div>
@@ -145,7 +146,7 @@
 				<div class="worktxt fadeup">
 					<h2 class="sub-heading">My Portfolio</h2>
 					<h2 class="parenthead">RECENT WORKS</h2>
-					<p>Explore a dynamic blend of creativity and functionality in my recent works portfolio. Dive into a world of captivating web design, where user-friendly interfaces meet stunning visuals, and discover the vibrant realm of vector artistry, where precision meets imagination. Join me on a journey where websites come to life, and vector graphics paint stories with every line. Welcome to a showcase where innovation meets aesthetics, creating digital experiences that leave a lasting impression.</p>
+					<p>Explore a dynamic blend of creativity and functionality in my recent works portfolio. Dive into a world of captivating web design, where user-friendly interfaces meet stunning visuals, and discover the vibrant realm of vector artistry, where precision meets imagination. Join me on a journey where websites come to life, and vector graphics paint stories with every line.</p>
 					<a href="https://www.behance.net/jonathanambatali" target="_blank">View More &nbsp;<i class="fa-solid fa-arrow-right"></i></a>
 				</div>
 			</div>
