--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
 							<h3>Booking Tickets</h3>
 							<p>Light Theme: Beaver Builder</p>
 							<p>Plan Type: 5 Pager | Event Tickets & RSVP</p>
-							<p>Color Scheme: <i class="fa-solid fa-square"></i>&nbsp;<i class="fa-solid fa-square"></i></p>
+							<p>Color Scheme: <i class="fa-solid fa-circle"></i>&nbsp;<i class="fa-solid fa-circle"></i></p>
 							<a href="https://www.behance.net/gallery/181049797/Renting-Multi-Family-Properties-Web-Design" target="_blank" class="demo-cta">Demo</a>
 						</div>
 						<div class="slide-img">
@@ -176,7 +176,7 @@
 							<h3>Booking Tickets</h3>
 							<p>Light Theme: Beaver Builder</p>
 							<p>Plan Type: 5 Pager | Event Tickets & RSVP</p>
-							<p>Color Scheme: <i class="fa-solid fa-square"></i>&nbsp;<i class="fa-solid fa-square"></i></p>
+							<p>Color Scheme: <i class="fa-solid fa-circle"></i>&nbsp;<i class="fa-solid fa-circle"></i></p>
 							<a href="https://www.behance.net/gallery/178824701/Health-Service-and-Care-Web-Design" target="_blank" class="demo-cta">Demo</a>
 						</div>
 						<div class="slide-img">
@@ -190,7 +190,7 @@
 							<h3>Booking Tickets</h3>
 							<p>Light Theme: Beaver Builder</p>
 							<p>Plan Type: 5 Pager | Event Tickets & RSVP</p>
-							<p>Color Scheme: <i class="fa-solid fa-square"></i>&nbsp;<i class="fa-solid fa-square"></i></p>
+							<p>Color Scheme: <i class="fa-solid fa-circle"></i>&nbsp;<i class="fa-solid fa-circle"></i></p>
 							<a href="https://www.behance.net/gallery/178824215/Food-Healthy-Lifestyle-Web-Design" target="_blank" class="demo-cta">Demo</a>
 						</div>
 						<div class="slide-img">
@@ -204,7 +204,7 @@
 							<h3>Booking Tickets</h3>
 							<p>Light Theme: Beaver Builder</p>
 							<p>Plan Type: 5 Pager | Event Tickets & RSVP</p>
-							<p>Color Scheme: <i class="fa-solid fa-square"></i>&nbsp;<i class="fa-solid fa-square"></i></p>
+							<p>Color Scheme: <i class="fa-solid fa-circle"></i>&nbsp;<i class="fa-solid fa-circle"></i></p>
 							<a href="https://www.behance.net/gallery/178825853/Book-Bar-and-Cafe-Web-Design" target="_blank" class="demo-cta">Demo</a>
 						</div>
 						<div class="slide-img">
@@ -218,7 +218,7 @@
 							<h3>Booking Tickets</h3>
 							<p>Light Theme: Beaver Builder</p>
 							<p>Plan Type: 5 Pager | Event Tickets & RSVP</p>
-							<p>Color Scheme: <i class="fa-solid fa-square"></i>&nbsp;<i class="fa-solid fa-square"></i></p>
+							<p>Color Scheme: <i class="fa-solid fa-circle"></i>&nbsp;<i class="fa-solid fa-circle"></i></p>
 							<a href="https://www.behance.net/gallery/178825567/(Real-Estate)-Property-Management-Services-Web-Design" target="_blank" class="demo-cta">Demo</a>
 						</div>
 						<div class="slide-img">
@@ -232,7 +232,7 @@
 							<h3>Booking Tickets</h3>
 							<p>Light Theme: Beaver Builder</p>
 							<p>Plan Type: 5 Pager | Event Tickets & RSVP</p>
-							<p>Color Scheme: <i class="fa-solid fa-square"></i>&nbsp;<i class="fa-solid fa-square"></i></p>
+							<p>Color Scheme: <i class="fa-solid fa-circle"></i>&nbsp;<i class="fa-solid fa-circle"></i></p>
 							<a href="https://www.behance.net/gallery/178825201/Construction-Services-Web-Design" target="_blank" class="demo-cta">Demo</a>
 						</div>
 						<div class="slide-img">
@@ -246,7 +246,7 @@
 							<h3>Booking Tickets</h3>
 							<p>Light Theme: Beaver Builder</p>
 							<p>Plan Type: 5 Pager | Event Tickets & RSVP</p>
-							<p>Color Scheme: <i class="fa-solid fa-square"></i>&nbsp;<i class="fa-solid fa-square"></i></p>
+							<p>Color Scheme: <i class="fa-solid fa-circle"></i>&nbsp;<i class="fa-solid fa-circle"></i></p>
 							<a href="https://www.behance.net/gallery/178825439/Food-Culinary-Services-Web-Design" target="_blank" class="demo-cta">Demo</a>
 						</div>
 						<div class="slide-img">
@@ -260,7 +260,7 @@
 							<h3>Booking Tickets</h3>
 							<p>Light Theme: Beaver Builder</p>
 							<p>Plan Type: 5 Pager | Event Tickets & RSVP</p>
-							<p>Color Scheme: <i class="fa-solid fa-square"></i>&nbsp;<i class="fa-solid fa-square"></i></p>
+							<p>Color Scheme: <i class="fa-solid fa-circle"></i>&nbsp;<i class="fa-solid fa-circle"></i></p>
 							<a href="https://www.behance.net/gallery/178824971/Luxury-Vacations-Web-Design" target="_blank" class="demo-cta">Demo</a>
 						</div>
 						<div class="slide-img">
@@ -274,7 +274,7 @@
 							<h3>Booking Tickets</h3>
 							<p>Light Theme: Beaver Builder</p>
 							<p>Plan Type: 5 Pager | Event Tickets & RSVP</p>
-							<p>Color Scheme: <i class="fa-solid fa-square"></i>&nbsp;<i class="fa-solid fa-square"></i></p>
+							<p>Color Scheme: <i class="fa-solid fa-circle"></i>&nbsp;<i class="fa-solid fa-circle"></i></p>
 							<a href="https://www.behance.net/gallery/178825337/Dental-Services-Web-Design" target="_blank" class="demo-cta">Demo</a>
 						</div>
 						<div class="slide-img">
@@ -288,7 +288,7 @@
 							<h3>Booking Tickets</h3>
 							<p>Light Theme: Beaver Builder</p>
 							<p>Plan Type: 5 Pager | Event Tickets & RSVP</p>
-							<p>Color Scheme: <i class="fa-solid fa-square"></i>&nbsp;<i class="fa-solid fa-square"></i></p>
+							<p>Color Scheme: <i class="fa-solid fa-circle"></i>&nbsp;<i class="fa-solid fa-circle"></i></p>
 							<a href="https://www.behance.net/gallery/178825675/Medical-Consultation-Web-Design" target="_blank" class="demo-cta">Demo</a>
 						</div>
 						<div class="slide-img">
@@ -302,7 +302,7 @@
 							<h3>Booking Tickets</h3>
 							<p>Light Theme: Beaver Builder</p>
 							<p>Plan Type: 5 Pager | Event Tickets & RSVP</p>
-							<p>Color Scheme: <i class="fa-solid fa-square"></i>&nbsp;<i class="fa-solid fa-square"></i></p>
+							<p>Color Scheme: <i class="fa-solid fa-circle"></i>&nbsp;<i class="fa-solid fa-circle"></i></p>
 							<a href="https://www.behance.net/gallery/178825773/Shipping-Continental-Services-Web-Design" target="_blank" class="demo-cta">Demo</a>
 						</div>
 						<div class="slide-img">
@@ -316,7 +316,7 @@
 							<h3>Booking Tickets</h3>
 							<p>Light Theme: Beaver Builder</p>
 							<p>Plan Type: 5 Pager | Event Tickets & RSVP</p>
-							<p>Color Scheme: <i class="fa-solid fa-square"></i>&nbsp;<i class="fa-solid fa-square"></i></p>
+							<p>Color Scheme: <i class="fa-solid fa-circle"></i>&nbsp;<i class="fa-solid fa-circle"></i></p>
 							<a href="https://www.behance.net/gallery/178825941/Online-Hockey-Network-Web-Design" target="_blank" class="demo-cta">Demo</a>
 						</div>
 						<div class="slide-img">
@@ -330,7 +330,7 @@
 							<h3>Booking Tickets</h3>
 							<p>Light Theme: Beaver Builder</p>
 							<p>Plan Type: 5 Pager | Event Tickets & RSVP</p>
-							<p>Color Scheme: <i class="fa-solid fa-square"></i>&nbsp;<i class="fa-solid fa-square"></i></p>
+							<p>Color Scheme: <i class="fa-solid fa-circle"></i>&nbsp;<i class="fa-solid fa-circle"></i></p>
 							<a href="https://www.behance.net/gallery/178826017/Medical-Services-Web-Design" target="_blank" class="demo-cta">Demo</a>
 						</div>
 						<div class="slide-img">
@@ -344,7 +344,7 @@
 							<h3>Booking Tickets</h3>
 							<p>Light Theme: Beaver Builder</p>
 							<p>Plan Type: 5 Pager | Event Tickets & RSVP</p>
-							<p>Color Scheme: <i class="fa-solid fa-square"></i>&nbsp;<i class="fa-solid fa-square"></i></p>
+							<p>Color Scheme: <i class="fa-solid fa-circle"></i>&nbsp;<i class="fa-solid fa-circle"></i></p>
 							<a href="https://www.behance.net/gallery/178826099/Ventilation-Services-Web-Design" target="_blank" class="demo-cta">Demo</a>
 						</div>
 						<div class="slide-img">
@@ -358,7 +358,7 @@
 							<h3>Booking Tickets</h3>
 							<p>Light Theme: Beaver Builder</p>
 							<p>Plan Type: 5 Pager | Event Tickets & RSVP</p>
-							<p>Color Scheme: <i class="fa-solid fa-square"></i>&nbsp;<i class="fa-solid fa-square"></i></p>
+							<p>Color Scheme: <i class="fa-solid fa-circle"></i>&nbsp;<i class="fa-solid fa-circle"></i></p>
 							<a href="https://www.behance.net/gallery/178826217/Counselling-Management-Services-Web-Design" target="_blank" class="demo-cta">Demo</a>
 						</div>
 						<div class="slide-img">
@@ -372,7 +372,7 @@
 							<h3>Booking Tickets</h3>
 							<p>Light Theme: Beaver Builder</p>
 							<p>Plan Type: 5 Pager | Event Tickets & RSVP</p>
-							<p>Color Scheme: <i class="fa-solid fa-square"></i>&nbsp;<i class="fa-solid fa-square"></i></p>
+							<p>Color Scheme: <i class="fa-solid fa-circle"></i>&nbsp;<i class="fa-solid fa-circle"></i></p>
 							<a href="https://www.behance.net/gallery/178826287/Hair-Extension-Business-Web-Design" target="_blank" class="demo-cta">Demo</a>
 						</div>
 						<div class="slide-img">
@@ -386,7 +386,7 @@
 							<h3>Booking Tickets</h3>
 							<p>Light Theme: Beaver Builder</p>
 							<p>Plan Type: 5 Pager | Event Tickets & RSVP</p>
-							<p>Color Scheme: <i class="fa-solid fa-square"></i>&nbsp;<i class="fa-solid fa-square"></i></p>
+							<p>Color Scheme: <i class="fa-solid fa-circle"></i>&nbsp;<i class="fa-solid fa-circle"></i></p>
 							<a href="https://www.behance.net/gallery/178826373/Accounting-Medicine-Web-Design" target="_blank" class="demo-cta">Demo</a>
 						</div>
 						<div class="slide-img">
@@ -400,7 +400,7 @@
 							<h3>Booking Tickets</h3>
 							<p>Light Theme: Beaver Builder</p>
 							<p>Plan Type: 5 Pager | Event Tickets & RSVP</p>
-							<p>Color Scheme: <i class="fa-solid fa-square"></i>&nbsp;<i class="fa-solid fa-square"></i></p>
+							<p>Color Scheme: <i class="fa-solid fa-circle"></i>&nbsp;<i class="fa-solid fa-circle"></i></p>
 							<a href="https://www.behance.net/gallery/179130503/Accounting-and-Bookkeeping-Web-Design" target="_blank" class="demo-cta">Demo</a>
 						</div>
 						<div class="slide-img">
@@ -414,7 +414,7 @@
 							<h3>Booking Tickets</h3>
 							<p>Light Theme: Beaver Builder</p>
 							<p>Plan Type: 5 Pager | Event Tickets & RSVP</p>
-							<p>Color Scheme: <i class="fa-solid fa-square"></i>&nbsp;<i class="fa-solid fa-square"></i></p>
+							<p>Color Scheme: <i class="fa-solid fa-circle"></i>&nbsp;<i class="fa-solid fa-circle"></i></p>
 							<a href="https://www.behance.net/gallery/179130645/NYC-Private-Tour-Web-Design" target="_blank" class="demo-cta">Demo</a>
 						</div>
 						<div class="slide-img">
@@ -428,7 +428,7 @@
 							<h3>Booking Tickets</h3>
 							<p>Light Theme: Beaver Builder</p>
 							<p>Plan Type: 5 Pager | Event Tickets & RSVP</p>
-							<p>Color Scheme: <i class="fa-solid fa-square"></i>&nbsp;<i class="fa-solid fa-square"></i></p>
+							<p>Color Scheme: <i class="fa-solid fa-circle"></i>&nbsp;<i class="fa-solid fa-circle"></i></p>
 							<a href="https://www.behance.net/gallery/181049995/Booking-Ticket-in-Wisconsin-Web-Design" target="_blank" class="demo-cta">Demo</a>
 						</div>
 						<div class="slide-img">
