--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 							<li><a href="/devcodeportfolio/">home</a></li>
 							<li><a href="/devcodeportfolio/#aboutme">about me</a></li>						
 							<li><a href="/devcodeportfolio/#portfolio">portfolio</a></li>
-							<li><a target="_blank" href="images/resume/MyResume.pdf">Hire Me</a></li>
+							<li><a target="_blank" href="images/resume/Ambatali_CV.pdf">Hire Me</a></li>
 						</ul>
 				</nav>
 			</div>
@@ -62,7 +62,7 @@
 						</ul>
 					  </div>
 					<p>I am a passionate web developer and talented vector artist, dedicated to creating stunning visual experiences and functional websites. </p>
-					<a target="_blank" href="images/resume/MyResume.pdf">Download CV &nbsp;<i class="fa-solid fa-download"></i></a>
+					<a target="_blank" href="images/resume/Ambatali_CV.pdf">Download CV &nbsp;<i class="fa-solid fa-download"></i></a>
 				</div>
 			</div>
 		</div>
@@ -467,7 +467,7 @@
 						<li><a href="/devcodeportfolio/">home</a></li>
 						<li><a href="/devcodeportfolio/#aboutme">about me</a></li>						
 						<li><a href="/devcodeportfolio/#portfolio">portfolio</a></li>
-						<li><a target="_blank" href="images/resume/MyResume.pdf">Hire Me</a></li>
+						<li><a target="_blank" href="images/resume/Ambatali_CV.pdf">Hire Me</a></li>
 					</ul>
 				</div>
 			</div>
