--- a/index.html
+++ b/index.html
@@ -159,6 +159,62 @@
 				<div class="slide-container active">
 					<div class="slide">
 						<div class="content">
+							<h3>Construction Projects Insurance</h3>
+							<p>Light Theme: Beaver Builder</p>
+							<p>Plan Type: 5 Pager | Event Tickets & RSVP</p>
+							<p>Color Scheme: <i class="fa-solid fa-circle"></i>&nbsp;<i class="fa-solid fa-circle"></i></p>
+							<a href="https://www.behance.net/gallery/183148691/Construction-Projects-Insurance-Web-Design" target="_blank" class="demo-cta">Demo</a>
+						</div>
+						<div class="slide-img">
+							<img src="https://mir-s3-cdn-cf.behance.net/project_modules/fs/a4634d183148691.653a4a3f8e759.jpg" alt="">
+						</div>
+					</div>
+				</div>
+				<div class="slide-container active">
+					<div class="slide">
+						<div class="content">
+							<h3>Loan Center</h3>
+							<p>Light Theme: Beaver Builder</p>
+							<p>Plan Type: 5 Pager | Event Tickets & RSVP</p>
+							<p>Color Scheme: <i class="fa-solid fa-circle"></i>&nbsp;<i class="fa-solid fa-circle"></i></p>
+							<a href="https://www.behance.net/gallery/183148199/Loan-Center-Web-Design" target="_blank" class="demo-cta">Demo</a>
+						</div>
+						<div class="slide-img">
+							<img src="https://mir-s3-cdn-cf.behance.net/project_modules/fs/8a8d64183148199.653a48a27cc9b.jpg" alt="">
+						</div>
+					</div>
+				</div>
+				<div class="slide-container">
+					<div class="slide">
+						<div class="content">
+							<h3>Lamination Solutions For Documents</h3>
+							<p>Light Theme: Beaver Builder</p>
+							<p>Plan Type: 5 Pager | Event Tickets & RSVP</p>
+							<p>Color Scheme: <i class="fa-solid fa-circle"></i>&nbsp;<i class="fa-solid fa-circle"></i></p>
+							<a href="https://www.behance.net/gallery/183148485/Lamination-Solutions-For-Documents-Web-Design" target="_blank" class="demo-cta">Demo</a>
+						</div>
+						<div class="slide-img">
+							<img src="https://mir-s3-cdn-cf.behance.net/project_modules/fs/64bcfc183148485.653a499e0d891.jpg" alt="">
+						</div>
+					</div>
+				</div>
+				<div class="slide-container">
+					<div class="slide">
+						<div class="content">
+							<h3>Communication Cabling Solutions</h3>
+							<p>Light Theme: Beaver Builder</p>
+							<p>Plan Type: 5 Pager | Event Tickets & RSVP</p>
+							<p>Color Scheme: <i class="fa-solid fa-circle"></i>&nbsp;<i class="fa-solid fa-circle"></i></p>
+							<a href="https://www.behance.net/gallery/183148553/Communication-Cabling-Solutions-Web-Design" target="_blank" class="demo-cta">Demo</a>
+						</div>
+						<div class="slide-img">
+							<img src="https://mir-s3-cdn-cf.behance.net/project_modules/fs/a7356a183148553.653a49d4439fb.jpg" alt="">
+						</div>
+					</div>
+				</div>
+				<div class="slide-container">
+					<div class="slide">
+						<div class="content">
 							<h3>Booking Tickets</h3>
 							<p>Light Theme: Beaver Builder</p>
 							<p>Plan Type: 5 Pager | Event Tickets & RSVP</p>
