--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
 						</div>
 					</div>
 				</div>
-				<div class="slide-container active">
+				<div class="slide-container">
 					<div class="slide">
 						<div class="content">
 							<h3>Loan Center</h3>
