--- a/index.html
+++ b/index.html
@@ -122,17 +122,17 @@
 					<div class="service-box1 s-box hidden">
 						<img src="images/icon/icon3 (1).png" alt="">
 						<h2>Web Design & Developer</h2>
-						<p>I specialize in creating customized web solutions and WordPress websites that empower businesses to establish a strong online presence.</p>
+						<p>I specialize in creating customized web solutions and WordPress websites that empower businesses to establish a strong online&nbsp;presence.</p>
 					</div>
 					<div class="service-box2 s-box hidden">
 						<img src="images/icon/icon1 (1).png" alt="">
 						<h2>Design QA/QC Certified</h2>
-						<p>I offer top-notch web quality assurance and quality control services to ensure that your website meets the highest standards of functionality, usability, and performance.</p>						
+						<p>I offer top-notch web quality assurance and quality control services to ensure that your website meets the highest standards of functionality, usability, and&nbsp;performance.</p>						
 					</div>
 					<div class="service-box3 s-box hidden">
 						<img src="images/icon/icon2 (1).png" alt="">
 						<h2>Vector Art & Design</h2>
-						<p>I specialize in creating captivating and versatile vector art that brings your ideas to life. With a keen eye for detail and a passion for creativity, I create stunning portrait vector, logos, banner tarpaulin, and more.</p>						
+						<p>I specialize in creating captivating and versatile vector art that brings your ideas to life. With a keen eye for detail and a passion for creativity, I create stunning portrait vector, logos, banner tarpaulin, and&nbsp;more.</p>						
 					</div>
 				</div>
 			</div>
