--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 				<div class="vectorimg fadein">
 					<div class="offerheading">
 						<h2 class="sub-heading">Why Choose Me</h2>
-						<h2 class="parenthead">MY EXPERTISE AREA</h2>
+						<h2 class="parenthead">MY EXPERTISE</h2>
 					</div>
 					<img src="images/Vector.png" alt="vector art">
 				</div>
