--- a/index.html
+++ b/index.html
@@ -204,12 +204,12 @@
 				<h2 class="parenthead">RECENT WORKS</h2>
 			</div>
 			<div class="tab">
-				<button class="tablinks" onclick="openProject(event, 'WebDesign')" id="defaultOpen">Web Design</button>
-				<button class="tablinks" onclick="openProject(event, 'VectorVexel')">Vector/Vexel</button>
-				<button class="tablinks" onclick="openProject(event, 'Logo')">Logo</button>
+				<button class="tablinks fadedown" onclick="openProject(event, 'WebDesign')" id="defaultOpen">Web Design</button>
+				<button class="tablinks fadeup" onclick="openProject(event, 'VectorVexel')">Vector/Vexel</button>
+				<button class="tablinks fadedown" onclick="openProject(event, 'Logo')">Logo</button>
 			  </div>
 	
-			  <div id="WebDesign" class="tabcontent">
+			  <div id="WebDesign" class="tabcontent fadein">
 				<div class="webprojflex">
 					<div class="webproj">
 						<img src="https://mir-s3-cdn-cf.behance.net/project_modules/fs/81a438181049797.651520d8e82cf.jpg" width="100%" alt="" />
@@ -263,8 +263,23 @@
 					<a href="https://www.behance.net/jonathanambatali" id="cta-tab" target="_blank">View All &nbsp;<i class="fa-solid fa-arrow-right"></i></a>
 			  </div>
 			  
-			  <div id="VectorVexel" class="tabcontent">
+			  <div id="VectorVexel" class="tabcontent fadein">
 				<div class="vectorflex">
+					<figure>
+						<img src="images/Illustration/vector (3).webp" alt="vector3" />
+					</figure>
+					<figure>
+						<img src="images/Illustration/vector (4).webp" alt="vector3" />
+					</figure>
+					<figure>
+						<img src="images/Illustration/vector (5).webp" alt="vector3" />
+					</figure>
+					<figure>
+						<img src="images/Illustration/vector (6).webp" alt="vector3" />
+					</figure>
+					<figure>
+						<img src="images/Illustration/vector (8).webp" alt="vector3" />
+					</figure>					
 				  <figure>
 					<img src="images/Illustration/vector (1).webp" alt="vector2" />
 				  </figure>
@@ -284,26 +299,11 @@
 					<img src="images/Illustration/vector (2).webp" alt="vector3" />
 				  </figure>
 				  <figure>
-					<img src="images/Illustration/vector (3).webp" alt="vector3" />
-				  </figure>
-				  <figure>
-					<img src="images/Illustration/vector (4).webp" alt="vector3" />
-				  </figure>
-				  <figure>
-					<img src="images/Illustration/vector (5).webp" alt="vector3" />
-				  </figure>
-				  <figure>
-					<img src="images/Illustration/vector (6).webp" alt="vector3" />
-				  </figure>
-				  <figure>
-					<img src="images/Illustration/vector (8).webp" alt="vector3" />
-				  </figure>
-				  <figure>
 					<img src="images/Illustration/vector (9).webp" alt="vector3" />
 				  </figure>
 				</div>
 			  </div>
-			  <div id="Logo" class="tabcontent">
+			  <div id="Logo" class="tabcontent fadein">
 				<div class="logoflex">
 					<img src="images/Logo/l1.webp" alt="logo1" />
 					<img src="images/Logo/l2.webp" alt="logo1" />
