--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 				</div>
 				<div class="logogrid">
 					<div class="ui-section">
-						<h2><span id="title-red">UI/UX</span> Design</h2>
+						<h2 class="fadeup"><span id="title-red">UI/UX</span> Design</h2>
 						<div class="ui-grid">
 							<figure class="fadeup">
 								<img src="images/icon-black-white/figma.PNG" alt="Figma">
@@ -125,7 +125,7 @@
 						</div>
 					</div>
 					<div class="web-section">
-						<h2><span id="title-red">WordPress</span> Development</h2>
+						<h2 class="fadeup"><span id="title-red">WordPress</span> Development</h2>
 						<div class="web-grid">
 							<figure class="fadeup">
 								<img src="images/icon-black-white/beaver builder.PNG" alt="Beaver Builder">
@@ -146,7 +146,7 @@
 						</div>
 					</div>
 					<div class="vec-section">
-						<h2><span id="title-red">Front-End</span> Development</h2>
+						<h2  class="fadeup"><span id="title-red">Front-End</span> Development</h2>
 						<div class="vec-grid">
 							<figure class="fadeup">
 								<img src="images/icon-black-white/html.PNG" alt="HTML">
@@ -213,51 +213,57 @@
 				<div class="webprojflex">
 					<div class="webproj">
 						<img src="https://mir-s3-cdn-cf.behance.net/project_modules/fs/81a438181049797.651520d8e82cf.jpg" width="100%" alt="" />
-						<h3>Cargo Delivery</h3>
-						<p>Light Theme: Beaver Builder</p>
-						<p>Plan Type: 5 Pager</p>
-						<p>Color Scheme: <span class="circle-color" style="color:#e2520c;"></span> <span class="circle-color" style="color:#1a2430;"></span></p>
-						<a href="#" class="demo-cta">Demo<span class="arrow"></span></a>		
+						<h3>Renting Multi-Family Properties</h3>
+						<p><span id="title-red">Plan Type:</span> Wordpress 5 Pager</p>
+						<p><span id="title-red">Theme:</span> Beaver Builder</p>
+						<p><span id="title-red">Features:</span> Blog Post, Gravity Forms</p>
+						<p><span id="title-red">Color Scheme:</span> <i class="fa-solid fa-circle" style="color: #e8ba5a;"></i> <i class="fa-solid fa-circle" style="color: #283347;"></i></p>
+						<a href="https://www.behance.net/gallery/181049797/Renting-Multi-Family-Properties-Web-Design" class="demo-cta" target="_blank">Demo <i class="fa-solid fa-angle-right"></i></a>	
 					  </div>
 					<div class="webproj">
 					  <img src="https://mir-s3-cdn-cf.behance.net/project_modules/fs/8a8478178824215.64eee8135ef15.jpg" width="100%" alt="" />
-					  <h3>Mental Health Care</h3>
-					  <p>Light Theme: Beaver Builder</p>
-					  <p>Plan Type: 4 Pager</p>
-					  <p>Color Scheme: <span class="circle-color" style="color:#20c1bf;"></span> <span class="circle-color" style="color:#057672;"></span></p>
-					  <a href="#" class="demo-cta">Demo<span class="arrow"></span></a>		
+					  <h3>Food Healthy Lifestyle</h3>
+					  <p><span id="title-red">Plan Type:</span> Wordpress 7 Pager</p>
+					  <p><span id="title-red">Theme:</span> Beaver Builder</p>
+					  <p><span id="title-red">Features:</span> Blog Post, Gravity Forms, WooCommerce Bookings</p>
+					  <p><span id="title-red">Color Scheme:</span> <i class="fa-solid fa-circle" style="color: #0b7f3f;"></i> <i class="fa-solid fa-circle" style="color: #c1d94f;"></i></p>
+					  <a href="https://www.behance.net/gallery/178824215/Food-Healthy-Lifestyle-Web-Design" class="demo-cta" target="_blank">Demo <i class="fa-solid fa-angle-right"></i></a>		
 					</div>
 					<div class="webproj">
 					  <img src="https://mir-s3-cdn-cf.behance.net/project_modules/fs/15c935178825853.64eeee9967f13.jpg" width="100%" alt="" />
-					  <h3>Booking Tickets</h3>
-					  <p>Light Theme: Beaver Builder</p>
-					  <p>Plan Type: 5 Pager | Event Tickets & RSVP</p>
-					  <p>Color Scheme: <span class="circle-color" style="color:#62485b;"></span> <span class="circle-color" style="color:#b77649;"></span></p>
-					  <a href="#" class="demo-cta">Demo<span class="arrow"></span></a>		
+					  <h3>Book Bar and Cafe</h3>
+					  <p><span id="title-red">Plan Type:</span> Wordpress 8 Pager</p>
+					  <p><span id="title-red">Theme:</span> Beaver Builder</p>
+					  <p><span id="title-red">Features:</span> Blog Post, Gravity Forms, WooCommerce Bookings</p>
+					  <p><span id="title-red">Color Scheme:</span> <i class="fa-solid fa-circle" style="color: #776154;"></i> <i class="fa-solid fa-circle" style="color: #fff;"></i></p>
+					  <a href="https://www.behance.net/gallery/178825853/Book-Bar-and-Cafe-Web-Design" class="demo-cta" target="_blank">Demo <i class="fa-solid fa-angle-right"></i></a>		
 					</div>
 					<div class="webproj">
 					  <img src="https://mir-s3-cdn-cf.behance.net/project_modules/fs/8e8070178825941.64eeeef170d9e.jpg" width="100%" alt="" />
-					  <h3>Rooftop Washing Solution</h3>
-					  <p> Dark Theme: Beaver Builder</p>
-					  <p>Plan Type: 8 Pager</p>
-					  <p>Color Scheme: <span class="circle-color" style="color:#006dba;"></span> <span class="circle-color" style="color:#000000;"></span></p>
-					  <a href="#" class="demo-cta">Demo<span class="arrow"></span></a>		
+					  <h3>Online Hockey Network</h3>
+					  <p><span id="title-red">Plan Type:</span> Wordpress 8 Pager</p>
+					  <p><span id="title-red">Theme:</span> Beaver Builder</p>
+					  <p><span id="title-red">Features:</span> Gravity Forms</p>
+					  <p><span id="title-red">Color Scheme:</span> <i class="fa-solid fa-circle" style="color: #7f001b;"></i> <i class="fa-solid fa-circle" style="color: #000;"></i></p>
+					  <a href="https://www.behance.net/gallery/178825941/Online-Hockey-Network-Web-Design" class="demo-cta" target="_blank">Demo <i class="fa-solid fa-angle-right"></i></a>		
 					</div>
 					<div class="webproj">
-					  <img src="https://mir-s3-cdn-cf.behance.net/project_modules/fs/0d6241178825773.64eeee455d06e.jpg" width="100%" alt="" />
-					  <h3>Accounting and Bookkeeping</h3>
-					  <p>Light Theme: Beaver Builder</p>
-					  <p>Plan Type: 4 Pager</p>
-					  <p>Color Scheme: <span class="circle-color" style="color:#007acc;"></span> <span class="circle-color" style="color:#333333;"></span></p>
-					  <a href="#" class="demo-cta">Demo<span class="arrow"></span></a>		
+					  <img src="https://mir-s3-cdn-cf.behance.net/project_modules/fs/8a8d64183148199.653a48a27cc9b.jpg" width="100%" alt="" />
+					  <h3>Loan Center</h3>
+					  <p><span id="title-red">Plan Type:</span> Wordpress 8 Pager</p>
+					  <p><span id="title-red">Theme:</span> Beaver Builder</p>
+					  <p><span id="title-red">Features:</span> Gravity Forms</p>
+					  <p><span id="title-red">Color Scheme:</span> <i class="fa-solid fa-circle" style="color: #08c076;"></i> <i class="fa-solid fa-circle" style="color: #00afee;"></i></p>
+					  <a href="https://www.behance.net/gallery/183148199/Loan-Center-Web-Design" class="demo-cta" target="_blank">Demo <i class="fa-solid fa-angle-right"></i></a>		
 					</div>
 					<div class="webproj">
 					  <img src="https://mir-s3-cdn-cf.behance.net/project_modules/fs/7d7580178825201.64eeebe52d711.jpg" width="100%" alt="" />
-					  <h3>Gollie Mask Bands</h3>
-					  <p>Light Theme: Beaver Builder</p>
-					  <p>Plan Type: 4 Pager | WooCommerce</p>
-					  <p>Color Scheme: <span class="circle-color" style="color:#f69431;"></span> <span class="circle-color" style="color:#000000;"></span></p>
-					  <a href="#" class="demo-cta">Demo<span class="arrow"></span></a>		
+					  <h3>Construction Services</h3>
+					  <p><span id="title-red">Plan Type:</span> Wordpress 6 Pager</p>
+					  <p><span id="title-red">Theme:</span> Beaver Builder</p>
+					  <p><span id="title-red">Features:</span> Gravity Forms</p>
+					  <p><span id="title-red">Color Scheme:</span> <i class="fa-solid fa-circle" style="color: #373f49;"></i> <i class="fa-solid fa-circle" style="color: #fff;"></i></p>
+					  <a href="https://www.behance.net/gallery/178825201/Construction-Services-Web-Design" class="demo-cta" target="_blank">Demo <i class="fa-solid fa-angle-right"></i></a>		
 					</div>
 					</div>
 					<a href="https://www.behance.net/jonathanambatali" id="cta-tab" target="_blank">View All &nbsp;<i class="fa-solid fa-arrow-right"></i></a>
