--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
 			</div>
 		</div>
 	</div>
-	<section class="main_portfolio spacer" id="portfolio">
+	<section id="portfolio" class="main_portfolio spacer">
 		<div class="container">
 			<div class="offerheading">
 				<h2 class="sub-heading">My Portfolio</h2>
