--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 	<link rel="stylesheet" href="css/style.css">
 	<link rel="icon" href="images/favicon.png" type="image/x-icon">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"/>
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css" />
 	<script defer src="js/app.js"></script>
 	<title>ND | My Portfolio</title>
 </head>
@@ -39,7 +40,7 @@
 		</div>
 		</div>
 	</header>
-	<div class="herosection">
+	<div id="theme-hero" class="herosection">
 		<div class="container">
 			<div class="herogrid">
 				<div class="heroname fadein">
@@ -348,6 +349,7 @@
 		</div>
 	</div>
 	<footer class="footersection">
+		<i class="bi bi-moon" id="toggleDark"></i>
 		<div class="container">
 			<div class="footergrid">
 				<div class="coltxt">
