--- a/index.html
+++ b/index.html
@@ -31,11 +31,8 @@
 						</ul>
 				</nav>
 			</div>
-			<div class="col-socmed">
-				<a href="tel:+639760181159"><i class="fa-solid fa-phone"></i></a>
-				<a href="mailto:jonathanambatali07@gmail.com"><i class="fa-solid fa-envelope"></i></a>
-				<a href="https://www.facebook.com/nathan.g.ambatali" target="_blank"><i class="fa-brands fa-facebook-f"></i></a>
-				<a href="https://www.behance.net/jonathanambatali" target="_blank"><i class="fa-brands fa-behance"></i></a>
+			<div class="col-theme">
+				<i class="bi bi-moon" id="toggleDark"></i>
 			</div>
 		</div>
 		</div>
@@ -46,6 +43,12 @@
 				<div class="heroname fadein">
 					<h2>Jonathan<br>Ambatali</h2>
 					<img src="images/f-reverse.png" alt="logo">
+					<div class="col-socmed">
+						<a href="tel:+639760181159"><i class="fa-solid fa-phone"></i></a>
+						<a href="mailto:jonathanambatali07@gmail.com"><i class="fa-solid fa-envelope"></i></a>
+						<a href="https://www.facebook.com/nathan.g.ambatali" target="_blank"><i class="fa-brands fa-facebook-f"></i></a>
+						<a href="https://www.behance.net/jonathanambatali" target="_blank"><i class="fa-brands fa-behance"></i></a>
+					</div>
 				</div>
 				<div class="col-hero">
 					<img src="images/newhero.webp" alt="logo">
@@ -349,7 +352,6 @@
 		</div>
 	</div>
 	<footer class="footersection">
-		<i class="bi bi-moon" id="toggleDark"></i>
 		<div class="container">
 			<div class="footergrid">
 				<div class="coltxt">
